//
//  TitleConstants.swift
//  NewsFeed
//
//  Created by Olga Sabadina on 12.12.2023.
//

import UIKit

enum TitleConstants {
    static let homeVC = "Time Line"
    static let searchVC = "Search News"
    static let reminedVC = "Reminded"
    static let savedVC = "Saved"
}
