//
//  ImageConstants.swift
//  NewsFeed
//
//  Created by Olga Sabadina on 12.12.2023.
//

import UIKit

enum ImageConstants {
    static let house = UIImage(systemName: "house")
    static let magnifyingglass = UIImage(systemName: "magnifyingglass")
    static let bell = UIImage(systemName: "bell")
    static let bookmark = UIImage(systemName: "bookmark")
    static let bookmarkFavourite = UIImage(systemName: "bookmark.fill")
    static let back = UIImage(systemName: "arrow.backward")
    static let close = UIImage(systemName: "xmark.circle.fill")
}
